Fontface syntax fix; spacing tweaks to adjust to new fonts.

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -8,10 +8,11 @@ $light: 300;
     font-family: $family;
     font-style: $style;
     font-weight: $weight;
-    src: assert-url('${path}.eot');
-    src: assert-url('${path}.eot') format('embedded-opentype'),
-      assert-url('${path}.woff') format('woff'),
-      assert-url('${path}.svg') format('svg');
+    src: font-url($path + '.eot');
+    src: font-url($path + '.eot') format('embedded-opentype'),
+         font-url($path + '.woff') format('woff'),
+         font-url($path + '.ttf') format('ttf'),
+         font-url($path + '.svg') format('svg');
 }
 
 @mixin set-font($family, $weight, $size, $height)
@@ -22,25 +23,29 @@ $light: 300;
   line-height: $height;
 }
 
-$font-family-sans-serif: 'Atlas Grotesk', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @font-face {
-  @include load-font($font-family-sans-serif, normal, $bold, 'AtlasGrotesk-Medium');
+  @include load-font($preferred-sans-serif, normal, $bold, 'AtlasGrotesk-Medium');
 }
 
 @font-face {
-  @include load-font($font-family-sans-serif, normal, $regular, 'AtlasGrotesk-Regular');
+  @include load-font($preferred-sans-serif, normal, $regular, 'AtlasGrotesk-Regular');
 }
 
 @font-face {
-  @include load-font($font-family-sans-serif, normal, $light, 'AtlasGrotesk-Light');
+  @include load-font($preferred-sans-serif, normal, $light, 'AtlasGrotesk-Light');
 }
 
-$font-family-serif: 'Chronicle Text G3', Georgia, 'Times New Roman', Times, serif;
+
 @font-face {
-  @include load-font($font-family-serif, normal, $regular, 'ChronicleTextG3-Roman');
+  @include load-font($preferred-serif, normal, $regular, 'ChronicleTextG3-Roman');
 }
 
-$font-family-monospace: 'Roboto Mono', Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-face {
+  font-family: $preferred-mono;
+  font-style: normal;
+  font-weight: $regular;
+  src: font-url('RobotoMono-Bold.ttf') format('ttf');
+}
 
 @mixin sans-serif($weight, $size, $height)
 {
@@ -49,7 +54,7 @@ $font-family-monospace: 'Roboto Mono', Menlo, Monaco, Consolas, "Courier New", m
 
 @mixin serif-headline($weight, $size, $height)
 {
-  @include set-font('Portrait', $weight, $size, $height);
+  @include set-font($font-family-headline, $weight, $size, $height);
 }
 
 @mixin serif-text($weight, $size, $height)
